# PiOrgan

./: CMakeLists.txt  PageEffects.qml  PageInstruments.qml  PageLoadSoundFont.qml  PageMidiPlayer.qml  PageSequencer.qml  controlInterfaceClient.cpp  controlInterfaceClient.h  images.qrc  main.cpp  main.qml  piorgan.cpp  piorgan.h  piorganInterface.cpp  piorganInterface.h  virtualKeyboard.cpp  virtualKeyboard.h
